k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: register-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: register-app
  template:
    metadata:
      labels:
        app: register-app
    spec:
      containers:
      - name: register-app
        image: youssraguira/register-app:latest # Correction ici : youssraguira -> yguira
        ports:
        - containerPort: 8080
